--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx3</title>
+  <title>SiKKMiXX is dope</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
