--- a/profile.html
+++ b/profile.html
@@ -23,6 +23,32 @@
         linear-gradient(#000, #050505);
       z-index: -1;
     }
+	
+.actions {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.smallbtn {
+  border: 1px solid rgba(255,255,255,0.18);
+  background: rgba(255,255,255,0.06);
+  color: rgba(255,255,255,0.9);
+  padding: 6px 10px;
+  border-radius: 999px;
+  cursor: pointer;
+  backdrop-filter: blur(10px);
+  transition: 0.2s;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
+.smallbtn:hover {
+  border-color: rgba(255,60,60,0.8);
+  box-shadow: 0 0 14px rgba(255,60,60,0.25);
+  color: rgba(255,200,200,1);
+}
+	
 
     .wrap {
       max-width: 900px;
