--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@ let player = document.getElementById("player")
 let playlist = []
 let currentIndex = 0
 let bassSmoothed = 0
+let currentTrack = null;
 
 
 const token = localStorage.getItem("token");
@@ -468,32 +469,37 @@ loadTrack()
 
 
 function playCurrentTrack() {
+  const track = playlist[currentIndex];
+  currentTrack = track;
 
-  const track = playlist[currentIndex]
-  const encoded = encodeURIComponent(track.filename)
+  const encoded = encodeURIComponent(track.filename);
+  document.getElementById("trackTitle").innerText = track.original_name || "Untitled";
 
-  const cleanName = track.original_name
-     .replace(".mp3", "")
-
-  document.getElementById("trackTitle").innerText = cleanName
-
-  player.src = `${API}/file/${encoded}`
+  player.src = `${API}/file/${encoded}`;
 }
 
 
 
+player.addEventListener("ended", async () => {
+  if (playlist.length === 0) return;
 
+  // Increment play count for the track that just finished
+  if (currentTrack?.id) {
+    fetch(`${API}/track-played`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ id: currentTrack.id })
+    }).catch(() => {});
+  }
 
-player.addEventListener("ended", () => {
+  // Move to next track
+  currentIndex++;
+  if (currentIndex >= playlist.length) currentIndex = 0;
 
-  if (playlist.length === 0) return
+  playCurrentTrack();
+  player.play();
+});
 
-  currentIndex++
-  if (currentIndex >= playlist.length) currentIndex = 0
-
-  playCurrentTrack()
-  player.play()
-})
 
 
 document.getElementById("nextBtn").addEventListener("click", () => {
