--- a/upload.html
+++ b/upload.html
@@ -65,6 +65,8 @@
     <h2>🎧 Upload Your MP3</h2>
 
     <form id="uploadForm">
+	<input type="text" name="artist" placeholder="Artist (optional)">
+
       <input type="file" name="file" accept=".mp3" required>
       <br>
       <button type="submit">Upload Track</button>
