--- a/upload.html
+++ b/upload.html
@@ -29,6 +29,17 @@
     input[type="file"] {
       margin: 20px 0;
     }
+	
+	input[type="text"]{
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #333;
+  background: #111;
+  color: white;
+  margin: 10px 0;
+}
+
 
     button {
       padding: 12px 30px;
