--- a/index.html
+++ b/index.html
@@ -473,10 +473,12 @@ function playCurrentTrack() {
   currentTrack = track;
 
   const encoded = encodeURIComponent(track.filename);
-const cleanName = (track.original_name || "")
-  .replace(/\.mp3$/i, "");   // removes .mp3 case-insensitive
+const title = (track.original_name || "").replace(/\.mp3$/i, "");
+const artist = (track.artist || "").trim();
 
-document.getElementById("trackTitle").innerText = cleanName;
+document.getElementById("trackTitle").innerText =
+  artist ? `${artist} — ${title}` : title;
+
 
 
   player.src = `${API}/file/${encoded}`;
