--- a/profile.html
+++ b/profile.html
@@ -230,7 +230,7 @@
         <a class="btn" href="/">Home</a>
         <a class="btn" href="/upload.html">Submit</a>
         <a class="btn" href="/my.html">My Submissions</a>
-        <button class="btn btn-danger" id="logoutBtn">Logout</button>
+       <button class="btn btn-danger" id="logoutBtn" type="button">Logout</button>
       </div>
     </div>
 
@@ -452,5 +452,26 @@ div.innerHTML = `
       }[s]));
     }
   </script>
+  
+  <script>
+(function () {
+  const btn = document.getElementById("logoutBtn");
+  if (!btn) return;
+
+  btn.addEventListener("click", (e) => {
+    e.preventDefault();
+
+    // Clear auth
+    localStorage.removeItem("token");
+
+    // Optional: clear any other cached UI state you might add later
+    // sessionStorage.clear();
+
+    // Go to login (use assign so it actually navigates)
+    window.location.assign("/login.html");
+  });
+})();
+</script>
+  
 </body>
 </html>
