--- a/profile.html
+++ b/profile.html
@@ -146,6 +146,10 @@
       </div>
 
       <div class="list" id="recentList"></div>
+	  <div class="list" id="adminPendingWrap" style="display:none;">
+  <div class="muted" style="margin-top:12px;">Admin Inbox (pending from all users)</div>
+  <div id="adminPendingList" class="list"></div>
+</div>
     </div>
   </div>
 
